2009-01-06  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder.c:
	Remove #include <camel/camel-i18n.h>

2009-01-05  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.25.4 release

2008-12-23  Ashish Shrivastava  <shashish@novell.com>

	** Part of fix for bug #441712 (bnc)

	* addressbook/e-book-backend-gal.c:
	Exchange fix for GAL issue while loading for bug #441712.
	Unlocking the mutex.

2008-12-15  Matthew Barnes  <mbarnes@redhat.com>

	* storage/Makefile.am:
	Uninstall exchange-connector-setup-$(BASE_VERSION).

2008-12-14  Matthew Barnes  <mbarnes@redhat.com>

	** Miscellaneous compiler warning cleanups.

	* calendar/e-cal-backend-exchange.c:
	Remove unnecessary #include <libgnomevfs/gnome-vfs-mime-utils.h>.

	* camel/camel-exchange-folder.c:
	#include <glib/gi18n-lib.h> for _() macro.

	* storage/exchange-migrate.c (setup_progress_dialog):
	gtk_box_pack_start_defaults() is deprecated.
	Use gtk_box_pack_start() instead.

2008-12-01  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.25.2 release changes

2008-11-20  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #558883

	* camel/camel-exchange-folder.h:
	* camel/camel-exchange-folder.c:
	* camel/camel-exchange-store.c:
	Revert related parts from bug #336074, which caused slow start up.

2008-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540346

	* addressbook/e-book-backend-gal.c: (start_book_view):
	Do not try to fetch contacts when not connected.

	* addressbook/e-book-backend-gal.c: (gal_reconnect), (get_contact),
	(get_contact_list), (build_contact_from_entry), (ldap_search_handler),
	(ldap_search_dtor), (start_book_view), (stop_book_view),
	(parse_page_control), (generate_cache), (authenticate_user),
	(get_supported_auth_methods), (load_source):
	Turn off debug printf-s.

2008-11-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.25.1 release and version bump
