@@ -1,3 +1,8 @@
+2009-01-08  Philip Van Hoof  <philip@codeminded.be>
+
+	* camel/camel-exchange-folder.c: Bugfix for Bug #566279. Introduces a 
+	new API in Camel needed for implementing EPlugin of Bug #565091
+
 2009-01-06  Matthew Barnes  <mbarnes@redhat.com>
 
 	* camel/camel-exchange-folder.c:
